# xorlang

./: .gitignore  CHANGELOG.md  GRAMMAR.md  IMPORT_SYSTEM_GUIDE.md  INSTALLATION.md  INSTALLER_GUIDE.md  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASE.md  build.py  build_linux.sh  build_windows.bat  build_with_installers.py  install_to_opt.sh  interpreter.py  lexer.py  main.py  parser.py  performance_test_simple.xor  pyproject.toml  release.sh  requirements.txt  setup.py  test_simple_import.xor  uninstall_xorlang.sh  xorlang_ide.py
.github/workflows/: release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  INSTALLATION.md  LANGUAGE_REFERENCE.md  MIGRATION.md  TUTORIAL.md
examples/: gui_http_example.xor  hello.xor
installer/linux/: install_xorlang.sh
installer/windows/: xorlang_installer.nsi
installers/: windows_setup.iss
src/xorlang/: __init__.py  __main__.py  cli.py  ide.py
src/xorlang/core/: __init__.py  ast_nodes.py  errors.py  ide_runner.py  interpreter.py  interpreter_optimized.py  lexer.py  parser.py  runner.py
src/xorlang/stdlib/: __init__.py  collections.xor  core.xor  gui.xor  http.xor  io.xor  lists.xor  object.xor  prelude.xor  string.xor
stdlib/: prelude.xor
tests/: test_basic.py
vscode-extension/: language-configuration.json  package.json
vscode-extension/syntaxes/: xorlang.tmLanguage.json
